title: Change Log
root-url: ../
simon-tab-class: tabbar-tab-highlighted
---

h1. Version 0.2.0 2012

* Major new changes.
* Added Pieman command line driver class.
* Modified Simon so he starts up with a HTTP Server waiting for the Pieman to issue instructions.
* Whole new set of command line args.
* More unit tests.
* Refactored and rebuilt the project and how it is assembled in XCode.
* lots of other changes.

h1. Version 0.1.9, Aug 2012

* Incremented minor version to 0.2.0 because we are adding HTTP functionality for CI build boxes.
* Added the boolean property logActions to enabled/isable logging of actions to help debug.
* Modifed the startup so that the SIAppBackpack is automatically loaded when the runtime starts. This removes the need to manually inject it in the main.m file.
* Added a --autorun program argument which can be used to start the stories from running on startup. Otherwise a Ui is displayed.
* Changed startup so that instead of loading the UI by default, it now starts a HTTP server which waits for commands.
* Added isEmpty method to NSString+Simon category.
* Implemented better filtering function for the UI display.
* Seperated the UIAppBackpack into UI and Http versions.
* Now storing state in a separate class rather than in variables.
* Refactored all the notifications and UI handling code.
* Added source, story, error code and message properties to userData associated with various notifications.
* Refactored UI methods for triggering runs.
* Added return NSError to loadStories method.

h1. Version 0.1.8, April 2012

* Moved execution recording and exception handling to SIStory to facilitate better reporting.
* Refactoring the backpack and runner to enable running of individual tests.
* Revamped UI for a better summary.
* Refactored so that the UI can be displayed without running tests.
* Added a search bar to the story report.
* Added ability to rerun all tests and search test file names and titles.


h1. Version 0.1.7, March 2012
